Bug 302440 - Chat Plasmoid popups not visible.
Summary: Chat Plasmoid popups not visible.
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: chat-plasmoid (other bugs)
Version First Reported In: git-latest
Platform: Ubuntu Linux
: NOR major
Target Milestone: 0.5.0
Assignee: Telepathy Bugs
URL:
Keywords:
: 305089 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-24 12:28 UTC by FabiB
Modified: 2012-08-13 15:31 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot - quickchat not visible (18.24 KB, image/png)
2012-08-06 10:05 UTC, m4yer+zeug
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FabiB 2012-06-24 12:28:38 UTC
After upgrade to 0.4 there is a new Plasma Widget - facebook/gplus like. Iadded it to my panel.and if somebody writes with me and im not there, i qill get a notification (the  avatar+ a little number on red) but if i click on it. nothing happens.
The symbol is like a pressed button and the number is gone. but no chat opens

KDE 4.8.90
Qt 4.8.2
kde-telepathy 0.4
telepathy-qt4 0.9.1

Reproducible: Always

Steps to Reproduce:
1. add widget to the panel
2. wait for someone who wants to write
3. press the icon
Actual Results:  
nothing

Expected Results:  
chat should open

the normal chat via applicationwindow works without a single problem
Comment 1 Martin Klapetek 2012-06-24 16:22:27 UTC
Thanks for the report.

Can I ask you about your plasma setup? Ie. where is your panel positioned, what other widgets you have there and what theme are you using? 

Also can you try putting it just on the desktop and see if it works there?

Thanks!
Comment 2 FabiB 2012-06-24 16:34:26 UTC
1. Monitor
plasma is folderview
Panel is at the bottom
Applets in there are 
[kickoff - clock - icon-tasks - quickchat - charmap - pastebin and systemtray]
plasma theme is my own but with air it is the same
Comment 3 George Kiagiadakis 2012-06-24 16:41:54 UTC
(In reply to comment #0)
> After upgrade to 0.4 there is a new Plasma Widget - facebook/gplus like.
> Iadded it to my panel.and if somebody writes with me and im not there, i
> qill get a notification (the  avatar+ a little number on red) but if i click
> on it. nothing happens.
> The symbol is like a pressed button and the number is gone. but no chat opens

I have the same bug on my trunk setup. The workaround is to click anywhere on the plasma desktop after having clicked the quick chat button. It looks to me like a window management bug.
Comment 4 FabiB 2012-06-24 16:52:38 UTC
(In reply to comment #3)
>  The workaround is to click anywhere
> on the plasma desktop after having clicked the quick chat button. It looks
> to me like a window management bug.
that dont work here. still no chat appears. and there is nothing in the 'alt+tab' list
Comment 5 David Edmundson 2012-06-26 14:02:35 UTC
George K has the same bug.. it's clearly a real issue. Marking as New.

Suggest possibly modifying the code into a popup applet rather than trying to do our own popups.
Comment 6 Aleix Pol 2012-07-16 23:31:22 UTC
Closed with https://git.reviewboard.kde.org/r/105543/
Comment 7 m4yer+zeug 2012-07-27 10:42:55 UTC
I still have this bug with latext git (d6a141af402d15513365998567d04955d1eec9cc).

Qt: 4.8.2
KDE: 4.8.97
Gentoo
Comment 8 Elias Probst 2012-08-03 22:32:48 UTC
I can confirm this issue does still exist.
KDE 4.9.0
Qt 4.8.2
KTP and TpQt from git, last rebuilt today.
Comment 9 Aleix Pol 2012-08-05 22:13:10 UTC
Maybe a screenshot could help? I'm unsure what's going on, it works fine here...
Comment 10 m4yer+zeug 2012-08-06 10:05:54 UTC
Created attachment 72982 [details]
screenshot - quickchat not visible

here's a screen shot, when I press the "icon" to open the quickchat,

panel is on the left side.
kde-4.9.0
ktp-text-ui: git from today.
gentoo.
Comment 11 David Edmundson 2012-08-11 16:25:43 UTC
Myself and Martin have this too, for me completely wiped plasmarc.
Comment 12 Weng Xuetian 2012-08-12 07:59:16 UTC
KDE 4.9.0
Qt 4.8.2
Ktp 0.4.1
Chakra
Well this is quite strange... when I add quick chat to the desktop, it might work, and if I move it to the panel, the popup have very high probability not visible
Comment 13 David Edmundson 2012-08-12 11:26:34 UTC
Relevant debug output with it not working:
starting a chat, then clicking on the icon

plasma-desktop(1757) Conversation::Conversation:
plasma-desktop(1757) ConversationQueManager::ConversationQueManager:
plasma-desktop(1757) MessagesModel::MessagesModel:
plasma-desktop(1757) MessagesModel::setTextChannel:
plasma-desktop(1757) MessagesModel::onMessageReceived: unreadMessagesCount = 1
plasma-desktop(1757) MessagesModel::onMessageReceived: text = "d"
plasma-desktop(1757) MessagesModel::onMessageReceived: messageToken = "aac4a"
plasma-desktop(1757) MessageProcessor::instance:
plasma-desktop(1757) MessageProcessor::loadFilters: Starting loading filters...
plasma-desktop(1757) MessageProcessor::loadFilters: loaded factory : KPluginFactory(0x4502d60)
plasma-desktop(1757) MessageProcessor::loadFilters: loaded message filter :  EmoticonFilter(0x3f2acd0)
plasma-desktop(1757) MessageProcessor::loadFilters: loaded factory : KPluginFactory(0x37dac20)
plasma-desktop(1757) MessageProcessor::loadFilters: loaded message filter :  ImagesFilter(0x45b7e90)
plasma-desktop(1757) MessageProcessor::processIncomingMessage: running filter : AbstractMessageFilter
plasma-desktop(1757) MessageProcessor::processIncomingMessage: running filter : AbstractMessageFilter
plasma-desktop(1757) MessageProcessor::processIncomingMessage: running filter : EmoticonFilter
plasma-desktop(1757) MessageProcessor::processIncomingMessage: running filter : ImagesFilter
plasma-desktop(1757) ImagesFilter::filterMessage: 0
plasma-desktop(1757) ConversationTarget::ConversationTarget:
plasma-desktop(1757) ConversationsModel::data: returning value  QVariant(Conversation*, )
plasma-desktop(1757) MessagesModel::setVisibleToUser: false
kwin(1743) KWin::Workspace::updateClientArea: screens:  1 desktops:  1
kwin(1743) KWin::Workspace::updateClientArea: Done.
Showing dialog at (1540,667)
plasma-desktop(1757) MessagesModel::setVisibleToUser: true
plasma-desktop(1757) MessagesModel::acknowledgeAllMessages: Conversation Visible, Acknowledging  1  messages.
kwin(1743) KWin::Client::readUserTimeMapTimestamp: User timestamp, ASN: 5951565
kwin(1743) KWin::Client::readUserTimeMapTimestamp: User timestamp, final: 'ID: 33568427 ;WMCLASS: "plasma-desktop" : "plasma-desktop" ;Caption: "plasma-desktop" ' : 5951565
kwin(1743) KWin::Workspace::allowClientActivation: Activation, compared: 'ID: 33568427 ;WMCLASS: "plasma-desktop" : "plasma-desktop" ;Caption: "plasma-desktop" ' : 5951565 : 5947641 : true
kwin(1743) KWin::Workspace::updateClientArea: screens:  1 desktops:  1
kwin(1743) KWin::Workspace::updateClientArea: Done.
kwin(1743) KWin::Workspace::allowFullClientRaising: Raising, compared: 5951565 : 5947641 : true
Showing dialog at (1540,667)
plasma-desktop(1757) MessagesModel::setVisibleToUser: true
plasma-desktop(1757) MessagesModel::acknowledgeAllMessages: Conversation Visible, Acknowledging  0  messages.
kwin(1743) KWin::Client::configureRequest: KWin::Client(0x2074860) true false false
kwin(1743) KWin::Client::configureRequest: PERMITTED 'ID: 33568427 ;WMCLASS: "plasma-desktop" : "plasma-desktop" ;Caption: "plasma-desktop" ' true
kwin(1743) KWin::Client::configureRequest: KWin::Client(0x2074860) true false false
kwin(1743) KWin::Client::configureRequest: PERMITTED 'ID: 33568427 ;WMCLASS: "plasma-desktop" : "plasma-desktop" ;Caption: "plasma-desktop" ' true
kwin(1743) KWin::Workspace::allowClientActivation: Activation, compared: 'ID: 33568427 ;WMCLASS: "plasma-desktop" : "plasma-desktop" ;Caption: "plasma-desktop" ' : 5951565 : 5947641 : true
kwin(1743) KWin::Workspace::takeActivity: takeActivity: not shown
Comment 14 Aleix Pol 2012-08-13 15:26:30 UTC
Git commit 66997aeddaaa7cd88d0b76879bc3168a01852c53 by Aleix Pol.
Committed on 13/08/2012 at 15:32.
Pushed by apol into branch 'master'.

Let the plasmoid appear properly if instanciated from plasma

And without being shown in the Taskbar and Pager

REVIEW: 105997

M  +1    -0    plasmoid/declarative-plugin/CMakeLists.txt
A  +30   -0    plasmoid/declarative-plugin/hidewindowcomponent.cpp     [License: LGPL (v2.1+)]
A  +38   -0    plasmoid/declarative-plugin/hidewindowcomponent.h     [License: LGPL (v2.1+)]
M  +2    -0    plasmoid/declarative-plugin/qml-plugins.cpp
M  +6    -2    plasmoid/org.kde.ktp-chatplasmoid/contents/ui/main.qml

http://commits.kde.org/telepathy-text-ui/66997aeddaaa7cd88d0b76879bc3168a01852c53
Comment 15 David Edmundson 2012-08-13 15:31:10 UTC
*** Bug 305089 has been marked as a duplicate of this bug. ***