Let the plasmoid appear properly if instanciated from plasma

And without being shown in the Taskbar and Pager

REVIEW: 105997
BUG: 302440